# command-code

./: .gitignore  CNAME  README.md
.github/workflows/: deploy-pages.yml
ai/SecuredFastAI/: .gitignore  build.sh
ai/SecuredFastAI/FastSecuredIX/: docker-compose.yml  rebuild_dashboard.sh
ai/isusa/: README.md  app.py  config.py  requirement.txt
ai/openAI/: main.py  message_conversation_history.py  multiple_chat_session.py
ai/openAI/chat_controller/: chat_controller.py  main.py
ai/openAI/chat_controller_fask/: chat_controller.py  main.py
ai/openAI/chat_manager/: chat.py  (+1 more)
cybewave/: chapter4  episode2-chapter-3-cybewave
profile/: index.html
profile/css/: styles.css
profile/data/: data.json
profile/js/: script.js
research/: README.md
syslog/: Makefile  README.md  config.h  config.mk  listen_for_syslogs.c  listen_for_syslogs.h  syslog.c
tiny_http_logger/: PRIVATE.md  README.md  SECURITY.md  background.js  manifest.json  popup.html  popup.js
traffic_flood/: README.md  arp_flood.cpp  lldp_flood.cpp  meson.build  send_packets.cpp  snmp_flood.cpp
web-firewall/: PRIVACY.md  README.md  RULE_ID_REFERENCE.md  SECURITY.md  SERVICE_WORKER_FIX.md  manifest.json  options.html  options.js  popup.html  popup.js  service_worker.js  telemetry.html  telemetry.js
web-firewall/rules/: presets.json  static_rules.json
weekly/cnclab/: .gitignore  README.md  index.html  package.json  vite.config.js
xflowbot/: app.py  requirements.txt  test_env.py
xflowbot/templates/: dashboard.html
youtube/python/: README.md  sample.txt  test_word_counter.py  word_counter.py
(+112 files in other folders)
