project('traffic-flood', 'cpp',
  version : '0.1',
  default_options : ['warning_level=3', 'cpp_std=c++17']
)

exe = executable('send_packets', 'send_packets.cpp',
  install : true
)

exe = executable('arp_flood', 'arp_flood.cpp',
  install : true
)

exe = executable('snmp_flood', 'snmp_flood.cpp',
  install : true
)

exe = executable('lldp_flood', 'lldp_flood.cpp',
  install : true
)